--- a/css/style.css
+++ b/css/style.css
@@ -6474,56 +6474,85 @@ a.icon-after .glyphicon, a .glyphicon.icon-after {
   font-weight: 300;
   src: url("fonts/../../fonts/museosans-300-webfont.eot?") format("eot"), url("fonts/../../fonts/museosans-300-webfont.woff2") format("woff2"), url("fonts/../../fonts/museosans-300-webfont.woff") format("woff"); }
 .flex-slider {
-  overflow: hidden;
-  /*border: 1px solid #ececec;*/
+  overflow: hidden !important;
+  position: relative;
   clear: both; }
+  .flex-slider.flex-sidebutton.has-button .view-content {
+    margin-left: 30px;
+    margin-right: 30px; }
+  .flex-slider.flex-sidebutton.has-button.has-button-outside {
+    overflow: visible !important; }
+    .flex-slider.flex-sidebutton.has-button.has-button-outside .view-content {
+      margin-left: -15px;
+      margin-right: -15px; }
+    .flex-slider.flex-sidebutton.has-button.has-button-outside .side-button-l {
+      left: -30px; }
+    .flex-slider.flex-sidebutton.has-button.has-button-outside .side-button-r {
+      right: -30px; }
   .flex-slider .slide-buttons {
     text-align: center; }
     .flex-slider .slide-buttons a {
       color: #979EB2;
       text-decoration: none;
       font-size: 20px;
-      padding: 0 2px; }
+      padding: 0 2px;
+      cursor: pointer; }
       .flex-slider .slide-buttons a.active {
         color: #5BC0C3 !important; }
   .flex-slider .view-content {
     white-space: nowrap;
-    width: 100%;
-    overflow: visible !important;
+    overflow: hidden !important;
     transition: .5s all; }
     .flex-slider .view-content .views-row {
       display: inline-block;
-      /*border: 1px solid #0062A0;*/
       margin: 0;
-      position: relative; }
+      position: relative;
+      left: 0;
+      transition: .5s all; }
   .flex-slider .side-button-l {
     float: left;
-    position: relative;
-    z-index: 10;
+    position: absolute;
+    top: 50%;
+    z-index: 9;
     font-size: 30px;
-    color: #cccfd0;
+    color: #C8CBCC;
     text-decoration: none;
     background-color: transparent;
-    /*            position: fixed;*/
     left: 0;
-    padding-top: 50%; }
+    cursor: pointer; }
+    .flex-slider .side-button-l:hover {
+      color: #d51c40; }
   .flex-slider .side-button-r {
     float: right;
-    position: relative;
-    z-index: 10;
+    position: absolute;
+    top: 50%;
+    z-index: 9;
     font-size: 30px;
-    color: #cccfd0;
+    color: #C8CBCC;
     text-decoration: none;
     background-color: transparent;
-    /*position: fixed;*/
     right: 0;
-    padding-top: 50%; }
+    cursor: pointer; }
+    .flex-slider .side-button-r:hover {
+      color: #d51c40; }
 
 body {
   font-family: MuseoSans300;
   color: #414042; }
   body.front #block-system-main {
     display: none; }
+  body header#navbar .navbar-header .logo-container {
+    text-align: center; }
+    body header#navbar .navbar-header .logo-container a.logo {
+      margin-right: 10px;
+      padding-right: 0; }
+      body header#navbar .navbar-header .logo-container a.logo img {
+        height: 1em;
+        margin-top: .6em; }
+    body header#navbar .navbar-header .logo-container a.navbar-brand {
+      font-size: 1em; }
+      body header#navbar .navbar-header .logo-container a.navbar-brand:hover {
+        color: #fff; }
 
 a {
   color: #d51c40;
@@ -6570,6 +6599,9 @@ section .highlighted.jumbotron {
     font-size: 6rem; }
 section .region.region-content .block .view-header h1, section .region.region-content .block .view-header h3 {
   font-size: 6rem; }
+
+div.before-content {
+  background-color: #f1f2f2; }
 
 div.view .views-field-field-image {
   text-align: center; }
@@ -6685,10 +6717,17 @@ section.col-sm-12 {
       height: 4.5rem;
       line-height: 4.5rem;
       text-align: center;
-      margin: 0 auto;
+      margin: .5rem auto;
+      transition: .5s;
       -webkit-box-shadow: 0px 1px 5px rgba(150, 150, 150, 0.64);
       -moz-box-shadow: 0px 1px 5px rgba(150, 150, 150, 0.64);
       box-shadow: 0px 1px 5px rgba(150, 150, 150, 0.64); }
+      .h-100vh .scroller a:hover {
+        width: 5.5rem;
+        height: 5.5rem;
+        line-height: 5.5rem;
+        margin: 0 auto;
+        font-size: 2rem; }
   .h-100vh .img-main {
     height: 5.5rem; }
 
