--- a/scss/flex-slider.scss
+++ b/scss/flex-slider.scss
@@ -1,10 +1,30 @@
 .flex-slider{
+    &.flex-sidebutton.has-button{
+        .view-content{
+            margin-left: 30px;
+            margin-right: 30px;
+        }
+    }
+    &.flex-sidebutton.has-button.has-button-outside{
+        .view-content{
+            margin-left: -15px;
+            margin-right: -15px;
+        }
+        .side-button-l{
+            left: -30px;
+        }
+        .side-button-r{
+            right: -30px;
+        }
+        overflow: visible !important;
+    }
     .slide-buttons{
         a{
             color: #979EB2;
             text-decoration: none;
             font-size: 20px;
             padding: 0 2px;
+            cursor: pointer;
             &.active{
                 color: #5BC0C3 !important; 
             }
@@ -14,41 +34,47 @@
     .view-content{
         .views-row{
             display: inline-block;
-            /*border: 1px solid #0062A0;*/
             margin: 0;
             position: relative;
+            left: 0;
+            transition: .5s all;        
         }            
         white-space: nowrap;
-        width: 100%;
-        overflow:visible !important;
+        overflow:hidden !important;
         transition: .5s all;            
-    } 
+    }
 
     .side-button-l{
+        &:hover{            
+            color: $color-link;
+        }
         float: left;
-        position: relative;
-        z-index: 10;
+        position: absolute;
+        top: 50%;
+        z-index: 9;
         font-size: 30px;
-        color: #cccfd0;
+        color: #C8CBCC;
         text-decoration: none;
         background-color: transparent;
-        /*            position: fixed;*/
         left: 0;
-        padding-top: 50%;
+        cursor: pointer;
     }
     .side-button-r{
+        &:hover{            
+            color: $color-link;
+        }
         float: right;
-        position: relative;
-        z-index: 10;
+        position: absolute;
+        top: 50%;
+        z-index: 9;
         font-size: 30px;
-        color: #cccfd0;
+        color: #C8CBCC;
         text-decoration: none;
         background-color: transparent;
-        /*position: fixed;*/
         right: 0;
-        padding-top: 50%;
+        cursor: pointer;
     }
-    overflow: hidden;
-    /*border: 1px solid #ececec;*/
+    overflow: hidden !important;
+    position: relative;
     clear: both;
 }
