--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,6 @@ $color-bgsoft:#f1f2f2;
 
 // Bootstrap Framework.
 @import '../bootstrap/assets/stylesheets/_bootstrap.scss';
-/*@import '../bootstrap/assets/stylesheets/_bootstrap-compass.scss';*/
 @import '../bootstrap/assets/stylesheets/bootstrap/mixins/_border-radius.scss';
 
 // Base-theme overrides. 
@@ -18,332 +17,19 @@ $color-bgsoft:#f1f2f2;
 
 @include font-face(MuseoSans300, 'fonts/../../fonts/museosans-300-webfont', 300, normal, eot woff2 woff); 
 
+@import "layout.scss";
+@import "h100vh.scss"; 
 @import "flex-slider.scss";
-
-// Layout
-body{  
-    font-family: MuseoSans300;
-    color: $color-text;
-    &.front{
-        #block-system-main{
-            display: none;
-        }
-    }
-    header#navbar{
-        .navbar-header{
-            .logo-container{
-                a.logo{
-                    img{
-                        height: 1em; 
-                        margin-top: .6em;
-                    }
-                    margin-right: 10px;
-                    padding-right: 0;
-                }
-                a.navbar-brand{
-                    &:hover{
-                        color: #fff;
-                    }
-                    font-size: 1em;
-                }
-                text-align: center;
-            }
-        }
-    }
-}
-a{
-    color: $color-link;
-    text-decoration: initial;
-    &:hover{
-        color: $color-theme;
-    }
-}
-b, strong{
-    color: $color-link;
-}
-
-input[type=button], .btn-default{
-    display: block;
-    background: $color-theme;
-    color: #fff;
-    border:0px solid transparent;
-    @include box-shadow(0);
-    &:hover{
-        background-color: $color-text;
-        color:#fff;
-    }
-}
+@import "blocks.scss";
 
 
-header.navbar.navbar-default{
-    margin: 0;
-    margin-top: 0px;
-    background-color: $color-theme;
-    border:0px;
-    color: #fff;
-    @include border-top-radius(0);
-    @include border-bottom-radius(0);   
-    h1,h2,h3,a{
-        color: inherit;
-    }
-    h1{
-        font-size: 5rem;
-    }
-}
 
-section{
-    .highlighted.jumbotron{
-        padding-top: 0;
-        padding-bottom: 0;
-        background-color:$color-bgsoft;
-        margin-bottom:0;
-        .block{
-            .view-header{
-                h1,h3{
-                    font-size: 6rem;
-                }
-            }
-        }
-    }
-    .region.region-content{
-        .block{
-            .view-header{
-                h1,h3{
-                    font-size: 6rem;
-                }
-            }
-        }
-    }
-}
 
-div.before-content{
-    background-color: $color-bgsoft;
-}
 
-div.view{
-    .views-field-field-image{
-        text-align: center;
-        .field-content{
-            text-align: center;
-            margin-left: auto;
-            margin-right: auto; 
-            img{
-                margin-left: auto;
-                margin-right: auto; 
-            }
-        }
-    }
-}
 
-.view-display-id-block.inline-rows{
-    .view-content{
-        width: 100%;
-        @media (min-width: $screen-sm-min){
-            width:auto;
-            display:flex;
-        }        
-    }
-    [class*=' col-']{
-        clear:both;
-        padding-top: 4.5rem;
-        padding-bottom: 4.5rem;
-        @media (min-width: $screen-sm-min){
-            clear:none;
-        }        
-        .views-field{
-            float:left;
-            line-height:6rem;
-            padding:0 1rem;
-            font-size:2rem;
-            @media (min-width: $screen-sm-min){
-                float:none;
-                clear:both;
-                text-align:center;
-                .field-content{
-                    margin: 0 auto;
-                }
-            }
-            &.views-field-field-image{
-                .field-content{
-                    width: 6.5rem;
-                    height: 6.5rem;
-                    text-align: center;
-                    @media (min-width: $screen-sm-min){
-                        width: 19rem;
-                        height: 19rem;
-                    }
-                    img{
-                        margin-left: auto;
-                        margin-right: auto; 
-                    }
-                }
 
-            }
-        }
-    }
-}
 
-.view-id-clients{
-    .view-content{
-        line-height: 60vh;
-    }
 
-    .views-field-field-image{
-        text-align:center;
-        position:relative;
-        .field-content{
-            img{
-                height: 6rem;
-                width: auto;
-            }
-        } 
-    }
-}
 
-section.col-sm-12{
-    padding: 0;
-}
 
-.h-100vh{
-    min-height: 600px;
-    height: 100vh;
-    display: block;
-    clear: both;
-    position: relative;
-    text-align:center;
-    .view-container{
-        position: absolute;
-        bottom: 0rem;
-        left: 50%;
-        transform: translateY(-50% ) translateX(-50%) ;
-        transform: translateX(-50%) ;
-        width: 99%;
-    }
-    .view-header{
-        h1,h3{
-            font-size: 6rem;
-        }
-    }
-    &.views-row{
-        .inner-container{
-            position: absolute;
-            bottom: 0rem;
-            left: 50%;
-            transform: translateY(-50% ) translateX(-50%) ;
-            transform: translateX(-50%);
-            width:100%;
-            text-align:center;
-            padding-top:5vh;
-            .views-field{
-                font-size: 1.5rem;
-                .field-content{
-                    margin-left:auto;
-                    margin-right:auto;
-                    p{
-                        font-size: 3rem;
-                    }
-                }  
 
-            }
-            .views-field-field-image{
-                padding-bottom:9rem;
-                @media (min-width: $screen-sm-min){
-
-                }                
-                .field-content{
-                    max-width: 450px;
-                }                
-            }
-        }
-    } 
-
-    .scroller{
-        padding:2rem 2rem 4.5rem;
-        clear:both;
-        /*text-shadow: 0px 1px 5px rgba(150, 150, 150, 0.64);*/ 
-        a{
-            &:hover{
-                width: 5.5rem;
-                height: 5.5rem;
-                line-height: 5.5rem;
-                margin: 0 auto;
-                font-size: 2rem;
-            }
-            color:#fff;
-            background-color: $color-theme;
-            border:3px solid #fff;
-            @include border-top-radius(50%);
-            @include border-bottom-radius(50%);
-            font-size: 1.5rem;
-            font-weight: lighter;
-            display: block;
-            width: 4.5rem;
-            height: 4.5rem;
-            line-height: 4.5rem;
-            text-align: center;
-            margin: .5rem auto;
-            transition: .5s;            
-            @include box-shadow(0px 1px 5px rgba(150, 150, 150, 0.64))
-        }
-    }
-    h1,h2,h3{
-
-    }
-    .img-main{
-        height: 5.5rem;
-    }    
-}
-
-footer.footer{
-    background-color: $color-bgsoft;
-    margin-top: 0;
-    border-top: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 3rem;
-}
-
-.view-id-how_to_find_us{
-    .view-container{
-        width: 100%;
-        transform: none;
-        left: 0;
-        .container{
-            width: 100%;
-            padding: 0;
-        }
-    }
-}
-
-#block-formblock-contact-site{
-    text-align:center;
-    .container{
-        h3{
-            font-size: 6rem;
-            margin-bottom: 3rem;
-        }
-        label{
-            display: none;
-        }
-        input{
-            font-size: 2rem;
-            padding: 1.3em .7em;
-            border: 2px solid #DADADA;
-            width: 100%;
-        }
-        textarea{
-            font-size: 2rem;
-            border: 2px solid #DADADA;
-            width: 100%;
-        }
-        button{
-            font-size: 2rem;
-            width: 100%;
-            border:0px solid transparent;
-            padding: .7em 1em;
-        }
-        max-width: 450px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
